# JaPaMusic

./: .gitignore  CMakeLists.txt  Client.cpp  README.md  Server.cpp
Networking/: Client.cpp  Client.h  Connection.cpp  Connection.h  Server.cpp  Server.h
Networking/Messages/: Message.cpp  Message.h  MessageDataRequest.cpp  MessageDataRequest.h  MessageDataResponse.cpp  MessageDataResponse.h  MessageFilesRequest.cpp  MessageFilesRequest.h  MessageFilesResponse.cpp  MessageFilesResponse.h  MessageTrackRequest.cpp  MessageTrackRequest.h  MessageTrackResponse.cpp  MessageTrackResponse.h
Player/: Player.cpp  Player.h
Utility/: Structs.h
